k8s/proxy/externals.yml
apiVersion: v1
kind: Service
metadata:
  name: db-manager
spec:
  type: ExternalName
  externalName: manager.midas-db.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: historical
spec:
  type: ExternalName
  externalName: historical.midas-svcs.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: symbol
spec:
  type: ExternalName
  externalName: symbol.midas-svcs.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: trade-observer
spec:
  type: ExternalName
  externalName: trade-observer.midas-svcs.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: token
spec:
  type: ExternalName
  externalName: token.midas-svcs.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: keychain
spec:
  type: ExternalName
  externalName: keychain.midas-svcs.svc.cluster.local
