k8s/proxy/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: midas
spec:
  type: NodePort
  selector:
    app: midas
  ports:
  - name: https
    port: 443
    targetPort: 443
  - name: http
    port: 80
    targetPort: 80
