k8s/proxy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: midas/svc-cert
  name: backend-ingress
  labels:
    app: midas
spec:
  tls:
    - hosts:
        - "minikube"
      secretName: proxy-cert
  rules:
    - host: "minikube"
      http:
        paths:
          - path: /historical(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: historical
                port:
                  number: 50000
          - path: /symbol(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: symbol
                port:
                  number: 50000
          - path: /bookticker(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: trade-observer
                port:
                  number: 50000
          - path: /token(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: token
                port:
                  number: 50000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: midas/svc-cert
  name: frontend-ingress
  labels:
    app: midas
spec:
  tls:
    - hosts:
        - "minikube"
      secretName: proxy-cert
  rules:
    - host: "minikube"
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: db-manager
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: https
